--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
       "name": "美国",
       "ipv4_server": "64.69.34.176:39001",
       "ipv6_server": "[2607:f130:0:140::491b:567c]:39002",
-      "key": "xxJWPjDr2oR2NVbP"
+      "key": "TCjkA3lkTIXNbK4A"
     },
     {
       "id": "de",
