--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
       "name": "意大利",
       "ipv4_server": "your_italian_ipv4:port",
       "ipv6_server": "[2a05:4140:3::3da3:18]:39002",
-      "key": "HLp8ARBSUfM4G08p"
+      "key": "CHLPj4Q75ntAIQeW"
     }
   ]
 }
